- support for a specific opers initial umodes on /oper, by umodes = ...;
  in operator {};
- added stats_e_disabled = yes|no; to general {};, controlling whether stats
  e (which can contain server ips) is never shown to anyone
- support for compressed|encrypted|topicburst|autoconn = yes|no; is gone,
  replaced with flags = compressed, encrypted, topicburst, autoconn;
- support for individual oper flags "kline = yes;" etc removed, now must use
  flags = ...; method -- NOTE, this means an oper gets *no* flags by
  default, including operwall.
- support for individual auth flags "kline_exempt = yes"; etc removed, now
  must use flags = ...; method

Client
------
- /help is now available for all users, as its now cached in memory.
  removes config option use_help from general {};
- default CHANNELLEN for local clients is now 50
- AWAYLEN added to 005, default is 90
- kick/part/quit now use REASONLEN (120) rather than TOPICLEN

Oper
----
- kline/dline <nick> is no longer supported
- oper reasons are now more fully supported
- opers can now be hidden from stats p, by flag "invisible"
- XLINEs no longer contain a type field, theyll now all just silently reject
- xlines are now 'tracked' - stats X shows how many times each xline has
  rejected a client
- temp xlines and resvs
- klines set against spoofed users will now take effect when the user
  connects as well, if the user is not kline_exempt
- trace spy now contains target param if its against a single user
- the old "you need xline=yes;" notices have been replaced by ERR_NOPRIVS
  (numeric 723)

Channels
--------
- persistent channels have been removed
- quiet_on_ban now uses a cache, which should speed it up

Server <-> Server Protocol
--------------------------
- support for bursting away messages on connect, controlled by
  burst_away = yes|no; in general {};
- TS6, the new server <-> server protocol.  As part of this you *must*
  specify a "sid" in serverinfo {}; that is three alphanumeric characters,