@@ -627,6 +627,12 @@ general {
 	 */
 	default_adminstring = "is a Server Administrator";
 
+	/* disable fake channels: disable local users joining fake versions
+	 * of channels, eg #foo^B^B.  Disables bold, mirc colour, reverse,
+	 * underline and hard space.  (ASCII 2, 3, 22, 31, 160 respectively).
+	 */
+	disable_fake_channels = yes;
+
         /* tkline_expire_notices: give a notice to opers when a tkline
          * expires
          */
