@@ -658,6 +658,12 @@ general {
 	 */
         default_floodcount = 10;
 
+	/* disable fake channels: disable local users joining fake versions
+	 * of channels, eg #foo^B^B.  Disables bold, mirc colour, reverse,
+	 * underline and hard space.  (ASCII 2, 3, 22, 31, 160 respectively).
+	 */
+	disable_fake_channels = yes;
+
 	/* failed oper notice: send a notice to all opers on the server when 
 	 * someone tries to OPER and uses the wrong password, host or ident.
 	 */
