@@ -526,8 +526,8 @@ const unsigned char ToUpperTab[] = {
 const unsigned int CharAttrs[] = {
 /* 0  */ CNTRL_C,
 /* 1  */ CNTRL_C | CHAN_C | NONEOS_C,
-/* 2  */ CNTRL_C | CHAN_C | NONEOS_C,
-/* 3  */ CNTRL_C | CHAN_C | NONEOS_C,
+/* 2  */ CNTRL_C | CHAN_C | FCHAN_C | NONEOS_C,
+/* 3  */ CNTRL_C | CHAN_C | FCHAN_C | NONEOS_C,
 /* 4  */ CNTRL_C | CHAN_C | NONEOS_C,
 /* 5  */ CNTRL_C | CHAN_C | NONEOS_C,
 /* 6  */ CNTRL_C | CHAN_C | NONEOS_C,
@@ -546,7 +546,7 @@ const unsigned int CharAttrs[] = {
 /* 19 */ CNTRL_C | CHAN_C | NONEOS_C,
 /* 20 */ CNTRL_C | CHAN_C | NONEOS_C,
 /* 21 */ CNTRL_C | CHAN_C | NONEOS_C,
-/* 22 */ CNTRL_C | CHAN_C | NONEOS_C,
+/* 22 */ CNTRL_C | CHAN_C | FCHAN_C | NONEOS_C,
 /* 23 */ CNTRL_C | CHAN_C | NONEOS_C,
 /* 24 */ CNTRL_C | CHAN_C | NONEOS_C,
 /* 25 */ CNTRL_C | CHAN_C | NONEOS_C,
@@ -555,7 +555,7 @@ const unsigned int CharAttrs[] = {
 /* 28 */ CNTRL_C | CHAN_C | NONEOS_C,
 /* 29 */ CNTRL_C | CHAN_C | NONEOS_C,
 /* 30 */ CNTRL_C | CHAN_C | NONEOS_C,
-/* 31 */ CNTRL_C | CHAN_C | NONEOS_C,
+/* 31 */ CNTRL_C | CHAN_C | FCHAN_C | NONEOS_C,
 /* SP */ PRINT_C | SPACE_C,
 /* ! */ PRINT_C | KWILD_C | CHAN_C | NONEOS_C,
 /* " */ PRINT_C | CHAN_C | NONEOS_C,
@@ -684,7 +684,7 @@ const unsigned int CharAttrs[] = {
 /* 0x9D */ CHAN_C | NONEOS_C,
 /* 0x9E */ CHAN_C | NONEOS_C,
 /* 0x9F */ CHAN_C | NONEOS_C,
-/* 0xA0 */ CHAN_C | NONEOS_C,
+/* 0xA0 */ CHAN_C | FCHAN_C | NONEOS_C,
 /* 0xA1 */ CHAN_C | NONEOS_C,
 /* 0xA2 */ CHAN_C | NONEOS_C,
 /* 0xA3 */ CHAN_C | NONEOS_C,
